--- a/.github/workflows/testpl1.yaml
+++ b/.github/workflows/testpl1.yaml
@@ -10,7 +10,7 @@ jobs:
     - name: Step1
       run: echo "Step1 executed"
 
-    - name: Stpe2
+    - name: Step2
       run: echo "Step2 Executed"
         
     
