--- a/.github/workflows/testpl2.yaml
+++ b/.github/workflows/testpl2.yaml
@@ -12,3 +12,9 @@ jobs:
 
     - name: Step2
       run: echo "Step2 Executed"
+
+    - name: Checkout the code
+      uses: actions/checkout@v6.0.1
+
+    - name: Read the content of code repo
+      run: cat two.txt
