--- a/.github/workflows/testpl2.yaml
+++ b/.github/workflows/testpl2.yaml
@@ -17,4 +17,4 @@ jobs:
       uses: actions/checkout@v6.0.1
 
     - name: Read the content of code repo
-      run: cat two.txt
+      run: cat one.txt
